nginx-sample/nginx-php-calico-2.yaml
---
### Php Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-2
  labels:
    app: php-2
    tier: backend
    group: webapplications
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-2
      tier: backend
      group: webapplications
  template:
    metadata:
      labels:
        app: php-2
        tier: backend
        group: webapplications
    spec:
      volumes:
      - name: index
        configMap:
          name: index-php-2
          items:
          - key: config
            path: index.php
      containers:
      - name: php-2
        image: php:7-fpm
        volumeMounts:
        - name: index
          mountPath: /code
---
### Nginx Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2
  labels:
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-2
      tier: frontend
      group: webapplications
  template:
    metadata:
      labels:
        app: nginx-2
        tier: frontend
        group: webapplications
    spec:
      volumes:
      - name: index
        configMap:
          name: index-php-2
          items:
          - key: config
            path: index.php
      - name: config
        configMap:
          name: nginx-config-2
          items:
          - key: config
            path: site.conf
      containers:
      - name: nginx-2
        image: nginx:1.7.9
        ports:
        - containerPort: 81
        volumeMounts:
        - name: index
          mountPath: /code
        - name: config
          mountPath: /etc/nginx/conf.d
---
### Services PHP
apiVersion: v1
kind: Service
metadata:
  name: php-2
  labels:
    name: php-2-service
    tier: backend
    group: webapplications
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: php-2
    tier: backend
    group: webapplications
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9000
---
### Services NGINX
apiVersion: v1
kind: Service
metadata:
  name: nginx-2
  labels:
    name: nginx-2-service
    tier: frontend
    group: webapplications
spec:
  type: NodePort
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  selector:
    app: nginx-2
    tier: frontend
    group: webapplications
  ports:
  - protocol: TCP
    port: 81
