nginx-sample/nginx-php-calico.yaml
---
### Php Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    app: php
    tier: backend
    group: webapplications
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php
      tier: backend
      group: webapplications
  template:
    metadata:
      labels:
        app: php
        tier: backend
        group: webapplications
    spec:
      volumes:
      - name: index
        configMap:
          name: index-php
          items:
          - key: config
            path: index.php
      containers:
      - name: php
        image: php:7-fpm
        volumeMounts:
        - name: index
          mountPath: /code
---
### Nginx Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      tier: frontend
      group: webapplications
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
        group: webapplications
    spec:
      volumes:
      - name: index
        configMap:
          name: index-php
          items:
          - key: config
            path: index.php
      - name: config
        configMap:
          name: nginx-config
          items:
          - key: config
            path: site.conf
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: /code
        - name: config
          mountPath: /etc/nginx/conf.d
---
### Services PHP
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    name: php-service
    tier: backend
    group: webapplications
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: php
    tier: backend
    group: webapplications
  ports:
  - protocol: TCP
    port: 9000
---
### Services NGINX
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx-service
    tier: frontend
    group: webapplications
spec:
  type: NodePort
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  selector:
    app: nginx
    tier: frontend
    group: webapplications
  ports:
  - protocol: TCP
    port: 80
